fix: (website) Fix social box wrapping.

--- a/src/website/index.css
+++ b/src/website/index.css
@@ -338,6 +338,7 @@ body {
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        flex-wrap: wrap;
         gap: 2em;
 
         & img {
